frontend/src/k8s-manifests/do/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-project
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: frontend.geek.per.sg
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 9091
